# MAI_FUND

lab1/: CMakeLists.txt  a.out  main.c  test.c
lab1/task1/: CMakeLists.txt  main.c
lab1/task1/include/: func.h  utils.h
lab1/task1/src/: func.c  utils.c
lab1/task1/test/: tests.cpp
lab1/task2/: main.c
lab1/task2/include/: func.h
lab1/task2/src/: func.c
lab1/task2/test/: tests.cpp
lab1/task3/: CMakeLists.txt  main.c
lab1/task3/include/: func.h  utils.h
lab1/task3/src/: func.c  utils.c
lab1/task3/test/: tests.cpp
lab1/task4/: CMakeLists.txt  main.c
lab1/task4/include/: func.h
lab1/task4/src/: func.c
lab1/task4Ai/: CMakeLists.txt  main.c
lab1/task4Ai/include/: func.h
lab1/task4Ai/src/: func.c
lab1/task4Ai/test/: tests.cpp
lab1/task5/: CMakeLists.txt  main.c
lab1/task5/test/: tests.cpp
lab1/task6/: CMakeLists.txt  main.c
lab1/task6/include/: func.h
lab1/task6/src/: func.c
lab1/task6/test/: tests.cpp
lab1/task7/: CMakeLists.txt  main.c
lab1/task7/include/: func.h
lab1/task7/src/: func.c
lab1/task7/test/: tests.cpp
lab1/task8/: CMakeLists.txt  main.c
lab1/task8/include/: func.h
lab1/task8/src/: func.c
lab1/task8/test/: tests.cpp
lab2/task1/: main.c
lab2/task1 added/src/: func.c
lab2/task1 added/test/: tests.cpp
lab2/task1added/: main.c
lab2/task1added/include/: func.h
lab2/task1ok/: CMakeLists.txt  main.c
lab2/task3/: CMakeLists.txt  main.c
lab2/task3 added/: main.c
lab2/task3added/: main.c
lab2/task3ok/: main.c
lab2/task4 added/: CMakeLists.txt  main.c
lab2/task4ok/: main.c
lab2/task5/: CMakeLists.txt  main.c  out.txt
lab2/task5added/: in.txt  main.c
lab2/task5ok/: main.c  out.txt
lab2/task6/: main.c
lab2/task6added/: in.txt  out.txt
lab2/task6ok/: CMakeLists.txt  in.txt  main.c  out.txt
lab3/task1ok/: CMakeLists.txt  main.c
lab3/task2finished/: CMakeLists.txt  main.c
lab3/task2need_to_check/: main.c
lab3/task3added/: main.c  out.txt
lab3/task3finshed/: CMakeLists.txt  in.txt
lab3/task4finished/: CMakeLists.txt  in.txt  mails.txt  main.c  postal_log.txt
lab3/task6added/: main.c
lab3/task6ok/: CMakeLists.txt  main.c
(+50 files in other folders)
